[gd_scene load_steps=10 format=3 uid="uid://ciqrpd5675boy"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_rvo1c"]
[ext_resource type="Script" path="res://Player/CameraController.gd" id="3_qrkly"]
[ext_resource type="PackedScene" uid="uid://bxn3fgs2y47eo" path="res://Player/dummy_player.tscn" id="4_qxbdk"]
[ext_resource type="AudioStream" uid="uid://bx0t7f2nuk2lr" path="res://Player/Sounds/03_Step_grass_03.wav" id="10_wx4h4"]
[ext_resource type="AudioStream" uid="uid://cbcb2d63weegs" path="res://Player/Sounds/45_Landing_01.wav" id="11_3s4i7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8x2xm"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_gqx4v"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_2ooex"]
dof_blur_far_distance = 45.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s5n07"]

[node name="Player" type="CharacterBody3D" groups=["damageables"]]
collision_layer = 16
collision_mask = 195
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
platform_floor_layers = 4294967234
script = ExtResource("1_rvo1c")
acceleration = 6.0
stopping_speed = 0.5

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8x2xm")

[node name="CameraController" type="Node3D" parent="."]
top_level = true
script = ExtResource("3_qrkly")
player_path = NodePath("..")
invert_mouse_y = true
tilt_upper_limit = 0.48
tilt_lower_limit = -0.8

[node name="CameraOverShoulderPivot" type="Marker3D" parent="CameraController"]
transform = Transform3D(-0.994522, 0.0400013, -0.0965717, 0, 0.92388, 0.382683, 0.104528, 0.380587, -0.918818, -0.848491, 3.48765, -2.32639)

[node name="CameraSpringArm" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(-1, -5.15034e-15, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, 0, 2.33984, 0)
shape = SubResource("SeparationRayShape3D_gqx4v")
spring_length = 10.0

[node name="CameraThirdPersonPivot" type="Marker3D" parent="CameraController/CameraSpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="PlayerCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(-1, -3.71248e-14, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, -8.74228e-07, 6.04006, -9.29023)
top_level = true
attributes = SubResource("CameraAttributesPractical_2ooex")
doppler_tracking = 2
current = true
fov = 50.0

[node name="CameraRayCast" type="RayCast3D" parent="CameraController/PlayerCamera"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, -15)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_s5n07")
target_position = Vector3(0, -2.6, 0)
margin = 0.5
max_results = 1
debug_shape_custom_color = Color(0.658824, 1, 0, 1)

[node name="CharacterRotationRoot" type="Node3D" parent="."]

[node name="DummySkin" parent="CharacterRotationRoot" instance=ExtResource("4_qxbdk")]

[node name="StepSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_wx4h4")
volume_db = 1.0

[node name="LandingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_3s4i7")
volume_db = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
